# vindicta-engine

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tests_failure.txt
.agent/workflows/: speckit-analyze.md  speckit-checklist.md  speckit-clarify.md  speckit-constitution.md  speckit-implement.md  speckit-plan.md  speckit-specify.md  speckit-tasks.md  speckit-taskstoissues.md
.github/workflows/: auto-merge.yml  changelog.yml  ci.yml  codeowners-validator.yml  commit-lint.yml  coverage-report.yml  dependency-audit.yml  dependency-update.yml  deprecation-tracker.yml  docs-build.yml  docs.yml  docstring-coverage.yml  license-header.yml  markdown-lint.yml  migration-safety.yml  package-size.yml  pr-guard.yml  publish-gate.yml  readme-badges.yml  release-drafter.yml  release.yml  sast-scanner.yml  test-impact.yml
.specify/memory/: constitution.md
docs/: index.md
features/: integrity.feature
features/steps/: integrity_steps.py
search/: search_index.json
specs/001-simulation-stat-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-simulation-stat-retrieval/checklists/: requirements.md
src/vindicta_engine/: health.py  integrity.py
src/vindicta_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vindicta_engine/ai/: __init__.py  base.py
src/vindicta_engine/dice/: __init__.py  engine.py  models.py
src/vindicta_engine/physics/: engine.py  models.py
tests/: test_physics.py
tests/dice/: test_engine.py
